<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="data_error_msg">error: data is not available</string>
    <string name="exit">Exit</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release date:</string>
    <string name="genres">Genres:</string>
    <string name="overview">Overview:</string>
    <string name="similar_movies">Similar Movies:</string>
</resources>
